--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,4 +1,5 @@
 @import 'support/_variables'
-
-*
-    font-family: 'Museo Sans Cyrl', sans-serif
+@import 'support/_general'
+@import 'blocks/_header'
+@import 'blocks/_promo'
+@import 'blocks/_buttons'
