--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -19,6 +19,9 @@
         font-size: 18px
         font-weight: 700
         display: block
+        &:hover
+            color: #fff
+            text-decoration: none
     &__contacts
         display: flex
         flex-direction: column
