--- a/src/sass/support/_general.sass
+++ b/src/sass/support/_general.sass
@@ -3,3 +3,8 @@
 .container  
     max-width: 1000px
     margin: 0 auto
+.title
+    color: #0d0d0d
+    font-size: 30px
+    font-weight: 500
+    text-align: center
