fix bug in promo.sass, create consultation block

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,3 +5,5 @@
 @import 'blocks/_buttons'
 @import 'blocks/_about'
 @import 'blocks/_media'
+@import 'blocks/_consultation'
+@import 'blocks/_forms'
