--- a/src/sass/support/_general.sass
+++ b/src/sass/support/_general.sass
@@ -8,3 +8,8 @@
     font-size: 30px
     font-weight: 500
     text-align: center
+    text-transform: uppercase
+    &_white
+        color: #ffffff
+        font-size: 36px
+        text-align: left
