--- a/src/sass/blocks/_buttons.sass
+++ b/src/sass/blocks/_buttons.sass
@@ -14,3 +14,7 @@
         border-radius: 5px
         font-size: 16px
         margin-top: 67px
+    &_submit
+        width: 100%
+        height: 55px
+        font-size: 16px
