--- a/src/sass/blocks/_consultation.sass
+++ b/src/sass/blocks/_consultation.sass
@@ -2,7 +2,7 @@
     min-height: 680px
     padding: 100px 0 92px 0
     background: url(../../img/consultation/consultation-bg.png) center center / cover no-repeat
-    &__descr
+    &__description
         color: #ffffff
         font-size: 20px
         font-weight: 500
