--- a/src/sass/blocks/_buttons.sass
+++ b/src/sass/blocks/_buttons.sass
@@ -8,6 +8,8 @@
     font-size: 12px
     font-weight: 500
     text-transform: uppercase
+    &:focus
+        outline: none
     &_main
         width: 300px
         height: 50px
