create slider block

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,9 +1,11 @@
-@import 'support/_variables'
-@import 'support/_general'
-@import 'blocks/_header'
-@import 'blocks/_promo'
-@import 'blocks/_buttons'
-@import 'blocks/_about'
-@import 'blocks/_consultation'
-@import 'blocks/_forms'
-@import 'blocks/_media'
+@import 'support/variables'
+@import 'support/general'
+@import 'blocks/header'
+@import 'blocks/promo'
+@import 'blocks/buttons'
+@import 'blocks/about'
+@import 'blocks/consultation'
+@import 'blocks/forms'
+@import 'blocks/slider'
+@import 'blocks/media'
+
