--- a/src/sass/blocks/_catalog.sass
+++ b/src/sass/blocks/_catalog.sass
@@ -31,3 +31,55 @@
             background-color: $main-color
             color: #fff
             border: none
+    &__content
+        margin-top: 60px
+    &-item
+        width: 300px
+        min-height: 440px
+        border: 2px solid #e8e8e8
+        padding: 20px 20px 26px 20px
+        &__img
+            max-width: 100%
+            height: 140px
+            display: block
+            margin: 0 auto
+        &__subtitle
+            color: #0d0d0d
+            font-size: 16px
+            font-weight: 700
+            text-align: center
+            margin-top: 20px
+        &__descr
+            color: #0d0d0d
+            font-size: 14px
+            font-weight: 300
+            margin-top: 16px
+            text-align: center
+        &__link
+            display: block
+            margin-top: 17px
+            text-align: center
+            color: $main-color
+            font-size: 14px
+            font-weight: 300
+            &:hover
+                color: $main-color
+        &__divider
+            width: 260px
+            height: 1px
+            background-color: #e8e8e8
+            margin-top: 19px
+            margin-bottom: 21px
+        &__footer
+            display: flex
+            justify-content: space-between
+            align-items: center
+        &__old-price
+            color: #555555
+            font-size: 14px
+            font-weight: 300
+            text-decoration: line-through
+        &__price
+            color: #050505
+            font-size: 20px
+            font-weight: 700
