--- a/src/sass/blocks/_catalog.sass
+++ b/src/sass/blocks/_catalog.sass
@@ -21,7 +21,7 @@
         transform: skewX(-25deg)
         margin: 0 5px
         cursor: pointer
-        transition: .5s all
+        transition: .3s all
         &:hover
             box-shadow: 3px 3px 20px $main-color
             border: none
@@ -32,15 +32,22 @@
             color: #fff
             border: none
     &__content
+        display: none
+        flex-wrap: wrap
         margin-top: 60px
+        &_active
+            display: flex
     &-item
+        overflow: hidden
         width: 300px
         min-height: 440px
         border: 2px solid #e8e8e8
         padding: 20px 20px 26px 20px
+        margin-bottom: 20px
+        margin-right: 20px
         &__img
             max-width: 100%
-            height: 140px
+            height: 200px
             display: block
             margin: 0 auto
         &__subtitle
@@ -62,6 +69,9 @@
             color: $main-color
             font-size: 14px
             font-weight: 300
+            text-decoration: underline
+            text-align: center
+            text-transform: uppercase
             &:hover
                 color: $main-color
         &__divider
@@ -83,3 +93,56 @@
             color: #050505
             font-size: 20px
             font-weight: 700
+        &__wrapper
+            display: flex
+            width: calc(200% + 40px)
+        &__content
+            width: 50%
+            margin-right: 0px
+            transform: translateX(-100%)
+            transition: .6s all
+            &_active
+                transform: translateX(0%)
+                margin-right: 20px
+        &__list
+            position: relative
+            width: 50%
+            margin-left: 20px
+            padding-right: 20px
+            padding-left: 19px
+            margin-bottom: 0
+            transform: translateX(0%)
+            transition: .4s all
+            list-style-type: none
+            &_active
+                margin-left: 0px
+                transform: translateX(-100%)
+            li
+                position: relative
+                color: #555555
+                font-size: 14px
+                font-weight: 300
+                margin-bottom: 20px
+                &::before
+                    content: ''
+                    position: absolute
+                    width: 5px
+                    height: 5px
+                    background-color: $main-color
+                    top: 7px
+                    left: -14px
+        &__back
+            position: absolute
+            bottom: 0
+            left: 50%
+            transform: translateX(calc(-50% - 19px))
+            display: block
+            color: $main-color
+            font-size: 14px
+            font-weight: 400
+            text-transform: uppercase
+            text-decoration: underline
+            &:hover
+                color: $main-color
+
+                
