--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -12,6 +12,9 @@
     .catalog
         &__content
             justify-content: center
+    .clients
+        &__wrapper
+            margin-left: 30px
 @media screen and ( max-width: 767px )
     .header
         &__official
@@ -37,8 +40,9 @@
             height: 35px
             font-size: 14px
             line-height: 35px
-            
-
+    .clients
+        &__descr
+            font-size: 14px
    
 @media screen and ( max-width: 575px  )
     .promo
@@ -60,6 +64,13 @@
     .catalog
         &__content
             margin-left: 20px
+    .clients
+        &__item
+            flex-direction: column
+            align-items: center
+        &__img
+            margin-bottom: 30px
+            
 @media screen and ( max-width: 500px )
     .catalog
         &__tabs
@@ -69,7 +80,11 @@
             height: 40px
             &:not(:last-child)
                 margin-bottom: 20px
-    
+    .title
+        font-size: 22px
+    .clients
+        &__item
+            margin-bottom: 50px
 @media screen and ( max-width: 440px  )
     *
         overflow-x: hidden
