created adaptive footer block

--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -43,7 +43,17 @@
     .clients
         &__descr
             font-size: 14px
-   
+    .footer
+        &__info
+            width: 390px
+            height: 250px
+        &__address
+            font-size: 16px
+        &__phone
+            font-size: 18px
+        &__link-item
+            width: 45px
+            height: 45px
 @media screen and ( max-width: 575px  )
     .promo
         &__header
@@ -126,6 +136,17 @@
     .form-feed
         input
             font-size: 12px
+    .footer
+        &__info
+            width: 300px
+            height: 200px
+            padding: 20px 60px 20px 60px
+        &__phone
+            margin-top: 20px
+        &__link
+            margin-top: 20px
+        &__link-item
+            border: none
 @media screen and ( max-width: 349px  )
     .promo
         &__header
