created modal window

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -7,8 +7,9 @@
 @import 'blocks/consultation'
 @import 'blocks/forms'
 @import 'blocks/slider'
-@import 'blocks/_catalog'
-@import 'blocks/_clients'
+@import 'blocks/catalog'
+@import 'blocks/clients'
 @import 'blocks/footer'
+@import 'blocks/modal'
 @import 'blocks/media'
 
