--- a/src/sass/blocks/_forms.sass
+++ b/src/sass/blocks/_forms.sass
@@ -15,4 +15,5 @@
         font-weight: 300
         &:nth-child(3)
             margin-bottom: 20px
-            
+    &_margin
+        margin-top: 25px
