--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -94,6 +94,10 @@
     .clients
         &__item
             margin-bottom: 50px
+    .modal
+        &__close
+            top: 8px
+            right: 8px
 @media screen and ( max-width: 440px  )
     *
         overflow-x: hidden
@@ -146,6 +150,13 @@
             margin-top: 20px
         &__link-item
             border: none
+    .modal
+        width: 300px
+        &__title
+            font-size: 16px
+    .form-feed
+        width: 200px
+        margin-left: 10px
 @media screen and ( max-width: 349px  )
     .promo
         &__header
