--- a/src/sass/blocks/_consultation.sass
+++ b/src/sass/blocks/_consultation.sass
@@ -7,3 +7,11 @@
         font-size: 20px
         font-weight: 500
         margin-top: 70px
+    .error
+        border: 1px solid red
+    label.error
+        color: #fff
+        border: none
+        text-align: center
+        margin-bottom: 15px
+        font-size: 14px
