added animation.sass and animated about block

--- a/src/sass/blocks/_about.sass
+++ b/src/sass/blocks/_about.sass
@@ -23,3 +23,10 @@
         a
             color: #ff0000
             text-decoration: underline
+    &__img
+        &_animated
+            &:hover
+                animation-name: heartbeat
+                animation-duration: 1.4s
+                animation-iteration-count: infinite
+            
