--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,4 +1,5 @@
 @import 'support/variables'
+@import 'support/animations'
 @import 'support/general'
 @import 'blocks/header'
 @import 'blocks/promo'
