--- a/src/sass/blocks/_catalog.sass
+++ b/src/sass/blocks/_catalog.sass
@@ -96,6 +96,7 @@
         &__wrapper
             display: flex
             width: calc(200% + 40px)
+            position: relative
         &__content
             width: 50%
             margin-right: 0px
@@ -107,16 +108,17 @@
         &__list
             position: relative
             width: 50%
-            margin-left: 20px
-            padding-right: 20px
-            padding-left: 19px
-            margin-bottom: 0
             transform: translateX(0%)
             transition: .4s all
-            list-style-type: none
             &_active
                 margin-left: 0px
                 transform: translateX(-100%)
+            ul
+                list-style-type: none
+                padding-right: 10px
+                padding-left: 19px
+                margin-bottom: 0px
+                margin-left: 20px
             li
                 position: relative
                 color: #555555
@@ -135,7 +137,7 @@
             position: absolute
             bottom: 0
             left: 50%
-            transform: translateX(calc(-50% - 19px))
+            transform: translateX(calc(-30% - 19px))
             display: block
             color: $main-color
             font-size: 14px
