--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -40,3 +40,7 @@
         border: 2px solid #ffffff
         border-radius: 100%
         margin: 0 15px
+    iframe
+        width: 100%
+        height: 630px
+        border: none
